# dfirm

./: CMakeLists.txt  NOTES.md  justfile  temp.c
include/: boot.h  core.h  led.h  log.h  uart.h  utils.h
include/modules/: accelerometer.h  gps.h  gps_check.h  gps_com.h  gps_parser.h
include/protocols/: iic.h  uart.h
src/: boot.c  core.c  gps.c  grove_imu_9dof.h  led.c  log.c  main.c  pico_i2c_compat.c  pico_i2c_compat.h  uart.c  utils.c
src/control/: controller.c
src/modules/: accelerometer.c  gps.c  gps_check.c  gps_com.c  gps_parser.c
src/protocols/: iic.c  uart.c
